<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Application specific settings -->

    <string name="app_name">Eye Diagnosis</string>
    <string name="class_application_settings" translatable="false"/>
    <string name="package_eyefi" translatable="false">fi.eye.android</string>
    <string name="package_mobi" translatable="false">com.eyefi.android.mobi</string>
    <bool name="flag_go_to_organize_after_move_to_input">false</bool>
    <bool name="flag_overwrite_by_camera_from_organize">false</bool>
    <bool name="flag_requires_input_folder">true</bool>
    <bool name="hide_button_view_images">false</bool>

    <!-- Generic constants -->

    <string name="title_activity_display_two">Compare Photos</string>
    <string name="title_activity_display_one">Display Photo</string>
    <string name="title_activity_list_folders_for_display">Select Name</string>
    <string name="title_activity_list_folders_for_display_second">Select Name for Second Picture</string>
    <string name="title_activity_organize_new_photos">Organize New Photos</string>
    <string name="title_activity_list_pictures_for_name">Select Pictures</string>
    <string name="title_activity_list_pictures_for_second_name">Select Second Picture</string>
    <string name="title_activity_select_two_pictures">Select Two Pictures</string>
    <string name="title_activity_request_saf">Grant folder permission</string>
    <string name="title_settings">Settings</string>
    <string name="title_camera">Camera</string>
    <string name="title_purchase">Purchase</string>
    <string name="title_rating">Rating</string>
    <string name="title_help">Help</string>
    <string name="section_select_photos">Select Photos</string>
    <string name="section_select_name">Select Name</string>
    <string name="section_select_date">Select Date</string>
    <string name="text_brightness">Brightness</string>
    <string name="text_contrast">Contrast</string>
    <string name="text_saturation">Saturation</string>
    <string name="text_color_temperature">Color Temperature</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_clear">Clear</string>
    <string name="button_select">Select</string>
    <string name="button_switch">Switch</string>
    <string name="button_delete">Delete</string>
    <string name="button_remove">Remove</string>
    <string name="button_move">Move</string>
    <string name="button_continue">Continue</string>
    <string name="button_preview">Preview</string>
    <string name="button_other_pictures">Other Pictures</string>
    <string name="button_import_from_gallery">Import image from gallery</string>
    <string name="button_import">Import</string>
    <string name="button_camera">Camera</string>
    <string name="button_zoom">zoom</string>
    <string name="button_overwrite">Overwrite</string>
    <string name="button_select_color" translatable="false">\u25a0</string>
    <string name="button_dont_show">Do not show again</string>
    <string name="button_show_later">Show again</string>
    <string name="button_rate">Rate the app</string>
    <string name="button_external_flash">External flash</string>
    <string name="button_saf_migrate_now">Give permissions now</string>
    <string name="button_saf_postpone">Postpone until later</string>
    <string name="button_saf_postpone_upgrade">Postpone until Android upgrade</string>
    <string name="button_saf_postpone_restart">Ask again</string>
    <string name="content_description_right_eye">Right Eye</string>
    <string name="content_description_left_eye">Left Eye</string>
    <string name="text_initializing">Initializing&#8230;</string>
    <string name="display_right_left">R-L</string>
    <string name="file_infix_right">right</string>
    <string name="file_infix_left">left</string>
    <string name="suffix_title_right">Right Eye</string>
    <string name="suffix_title_left">Left Eye</string>
    <string name="hint_search_name">[Search name]</string>
    <string name="hint_insert_name">[Enter name]</string>
    <string name="hint_edit_comment">[Enter image comment]</string>
    <string name="color_picker_title">Select an overlay color</string>
    <string name="color_picker_default_title">Select a Color</string>
    <string name="color_swatch_description">Color <xliff:g id="color_index" example="14">%1$d</xliff:g></string>
    <string name="color_swatch_description_selected">Color <xliff:g id="color_index" example="14">%1$d</xliff:g> selected</string>

    <!-- Resources configuring behaviour of activities in the app -->

    <string-array name="activities_with_action_camera" translatable="false"/>
    <string-array name="activities_with_action_purchase" translatable="false"/>
    <string-array name="activities_with_action_settings" translatable="false"/>
    <string-array name="activities_with_home_enablement" translatable="false">
        <item>de.jeisfeld.augendiagnoselib.activities.DisplayHtmlActivity</item>
        <item>de.jeisfeld.augendiagnoselib.activities.ListFoldersForDisplayActivity</item>
        <item>de.jeisfeld.augendiagnoselib.activities.ListPicturesForNameActivity</item>
        <item>de.jeisfeld.augendiagnoselib.activities.OrganizeNewPhotosActivity</item>
        <item>de.jeisfeld.augendiagnoselib.activities.SelectTwoPicturesActivity</item>
        <item>de.jeisfeld.augendiagnoselib.activities.SettingsActivity</item>
    </string-array>
    <string-array name="googlebilling_inapp_ids" translatable="false" />
    <string-array name="googlebilling_subscription_ids" translatable="false"/>
    <string name="googlebilling_onetime_title">Premium Pack (%1$s)</string>
    <string name="googlebilling_subscription_title">Monthly Pack (%1$s)</string>
    <string name="googlebilling_onetime_title_purchased">Premium Pack (purchased)</string>
    <string name="googlebilling_subscription_title_purchased">Monthly Pack (subscribed)</string>
    <string name="googlebilling_onetime_title_pending">Premium Pack (pending)</string>
    <string name="googlebilling_subscription_title_pending">Monthly Pack (pending)</string>
    <string name="googlebilling_onetime_text">Unlimited use of the app. This requires a one-time payment of %1$s.</string>
    <string name="googlebilling_subscription_text">Use of the app with all features for one month. The subscription costs %1$s per month, is extended monthly and can be canceled at any time via Google Play.</string>

    <string name="help_overview_in_list_folders" translatable="false">false</string>

    <!-- Resources defining availalble help screens -->

    <array name="html_navigation_resources">
        <item>@string/html_navigation_overview</item>
        <item>@string/html_navigation_settings</item>
        <item>@string/html_navigation_organize_photos</item>
        <item>@string/html_navigation_display_photos</item>
        <item>@string/html_navigation_release_notes</item>
    </array>
    <array name="html_resources">
        <item>@string/html_overview</item>
        <item>@string/html_settings</item>
        <item>@string/html_organize_photos</item>
        <item>@string/html_display_photos</item>
        <item>@string/html_release_notes_base</item>
    </array>

</resources>