<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/title_camera"
        android:visible="false"/>
    <item
        android:id="@+id/action_purchase"
        android:icon="@drawable/ic_action_dollar"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/title_purchase"
        android:visible="false"/>
    <item
        android:id="@+id/action_rating"
        android:icon="@drawable/ic_action_star"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/title_rating"
        android:visible="false"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/title_settings"
        android:visible="false"/>
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/title_help"/>

</menu>