<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/fragment_display_one_overlay"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    tools:context=".activities.DisplayOneActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:orientation="vertical">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonClarity"
            style="@style/ActionBarButtonLandscape"
            android:drawableRight="@drawable/ic_clarity"/>

        <Button
            android:id="@+id/buttonInfo"
            style="@style/ActionBarButtonLandscape"
            android:drawableRight="@drawable/ic_action_info"/>

        <Button
            android:id="@+id/buttonComment"
            style="@style/ActionBarButtonLandscape"
            android:drawableRight="@drawable/ic_comment"/>

        <Button
            android:id="@+id/buttonShare"
            style="@style/ActionBarButtonLandscape"
            android:drawableRight="@drawable/ic_action_share"/>

        <Button
            android:id="@+id/buttonSave"
            style="@style/ActionBarButtonLandscape"
            android:drawableRight="@drawable/ic_action_save"/>

        <Button
            android:id="@+id/buttonTools"
            style="@style/ActionBarButtonLandscape"
            android:drawableRight="@drawable/ic_tools_down"/>

        <Button
            android:id="@+id/buttonHelp"
            style="@style/ActionBarButtonLandscape"
            android:drawableRight="@drawable/ic_action_help"/>
    </LinearLayout>

    <FrameLayout style="@style/SeparatorBarVertical"/>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewGuide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/guide_text_size"
            android:visibility="gone"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <de.jeisfeld.augendiagnoselib.components.OverlayPinchImageView
                android:id="@+id/mainImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ImageView
                android:id="@+id/circleOverlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/text_initializing"
                android:visibility="gone"/>

        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/separatorTools"
        style="@style/SeparatorBarVertical"/>

    <LinearLayout
        android:id="@+id/seekBarColorTemperatureLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iconColorTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_color_temperature"
            android:src="@drawable/ic_seek_color_temperature"/>

        <de.jeisfeld.augendiagnoselib.components.VerticalSeekBar
            android:id="@+id/seekBarColorTemperature"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:max="100"
            android:progress="50"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/seekBarSaturationLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iconSaturation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_saturation"
            android:src="@drawable/ic_seek_saturation"/>

        <de.jeisfeld.augendiagnoselib.components.VerticalSeekBar
            android:id="@+id/seekBarSaturation"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:max="100"
            android:progress="50"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/seekBarBrightnessLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iconBrightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_brightness"
            android:src="@drawable/ic_seek_brightness"/>

        <de.jeisfeld.augendiagnoselib.components.VerticalSeekBar
            android:id="@+id/seekBarBrightness"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:max="100"
            android:progress="50"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/seekBarContrastLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/anchorForContextMenu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="right"/>

        <ImageView
            android:id="@+id/iconContrast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_contrast"
            android:src="@drawable/ic_seek_contrast"/>

        <de.jeisfeld.augendiagnoselib.components.VerticalSeekBar
            android:id="@+id/seekBarContrast"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:max="100"
            android:progress="50"/>
    </LinearLayout>

    <Button
        android:id="@+id/buttonGuidedTopoSetup"
        android:layout_width="@dimen/togglebutton_fullsize"
        android:layout_height="fill_parent"
        android:enabled="false"
        android:gravity="center"
        android:padding="0dp"
        android:textSize="@dimen/togglebutton_circlesize"
        android:visibility="visible"/>

    <LinearLayout
        android:id="@+id/buttonOverlayLayout"
        android:layout_width="@dimen/togglebutton_fullsize"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ToggleButton
            android:id="@+id/toggleButtonOverlayCircle"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_weight="1"
            android:checked="false"
            android:gravity="center"
            android:padding="0dp"
            android:textSize="@dimen/togglebutton_circlesize"
            android:visibility="gone"/>

        <ToggleButton
            android:id="@+id/toggleButtonOverlay1"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_weight="1"
            android:checked="false"
            android:padding="0dp"
            android:textSize="@dimen/togglebutton_circlesize"
            android:visibility="gone"/>

        <ToggleButton
            android:id="@+id/toggleButtonOverlay2"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="-6dp"
            android:layout_weight="1"
            android:checked="false"
            android:padding="0dp"
            android:textSize="@dimen/togglebutton_circlesize"
            android:visibility="gone"/>

        <ToggleButton
            android:id="@+id/toggleButtonOverlay3"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="-6dp"
            android:layout_weight="1"
            android:checked="false"
            android:padding="0dp"
            android:textSize="@dimen/togglebutton_circlesize"
            android:visibility="gone"/>

        <ToggleButton
            android:id="@+id/toggleButtonOverlay4"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="-6dp"
            android:layout_weight="1"
            android:checked="false"
            android:padding="0dp"
            android:textSize="@dimen/togglebutton_circlesize"
            android:visibility="gone"/>

        <ToggleButton
            android:id="@+id/toggleButtonOverlay5"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="-6dp"
            android:layout_weight="1"
            android:checked="false"
            android:padding="0dp"
            android:textSize="@dimen/togglebutton_circlesize"
            android:visibility="gone"/>

        <ToggleButton
            android:id="@+id/toggleButtonOverlay6"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="-6dp"
            android:layout_weight="1"
            android:checked="false"
            android:padding="0dp"
            android:textSize="@dimen/togglebutton_circlesize"
            android:visibility="gone"/>

        <ToggleButton
            android:id="@+id/toggleButtonOverlay7"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="-6dp"
            android:layout_weight="1"
            android:checked="false"
            android:padding="0dp"
            android:textSize="@dimen/togglebutton_circlesize"
            android:visibility="gone"/>

        <ToggleButton
            android:id="@+id/toggleButtonOverlay8"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="-6dp"
            android:layout_weight="1"
            android:checked="false"
            android:padding="0dp"
            android:textSize="@dimen/togglebutton_circlesize"
            android:visibility="gone"/>

        <ToggleButton
            android:id="@+id/toggleButtonOverlay9"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="-6dp"
            android:layout_weight="1"
            android:checked="false"
            android:padding="0dp"
            android:textSize="@dimen/togglebutton_circlesize"
            android:visibility="gone"/>

        <ToggleButton
            android:id="@+id/toggleButtonOverlay10"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="-6dp"
            android:layout_weight="1"
            android:checked="false"
            android:padding="0dp"
            android:textSize="@dimen/togglebutton_circlesize"
            android:visibility="gone"/>

        <Button
            android:id="@+id/buttonSelectColor"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="0dp"
            android:text="@string/button_select_color"
            android:textSize="@dimen/icon_overlay_color_size"/>

        <ToggleButton
            android:id="@+id/toggleButtonPupil"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_weight="1"
            android:checked="false"
            android:gravity="center"
            android:padding="0dp"
            android:textSize="@dimen/togglebutton_circlesize"/>

        <ToggleButton
            android:id="@+id/toggleButtonLink"
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:background="@drawable/lock"
            android:checked="false"
            android:padding="0dp"
            android:textOff=""
            android:textOn=""/>
    </LinearLayout>

</LinearLayout>