<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/camera_overall_frame"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:padding="0dp">

    <FrameLayout
        android:id="@+id/camera_preview_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical">

        <SurfaceView
            android:id="@+id/camera1_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </SurfaceView>

        <TextureView
            android:id="@+id/camera2_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </TextureView>

        <ImageView
            android:id="@+id/camera_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/text_initializing"/>

        <View
            android:id="@+id/camera_flash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/white"
            android:visibility="gone"/>
    </FrameLayout>

    <de.jeisfeld.augendiagnoselib.components.PinchImageView
        android:id="@+id/camera_review"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/text_initializing"/>

    <LinearLayout
        android:id="@+id/camera_thumb_layout_right"
        android:layout_width="@dimen/camera_thumb_frame_size"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:background="@drawable/camera_thumb_background"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/camera_thumb_frame_boundary"
            android:gravity="center_horizontal"
            android:text="@string/content_description_right_eye"/>

        <ImageView
            android:id="@+id/camera_thumb_image_right"
            android:layout_width="@dimen/camera_thumb_size"
            android:layout_height="@dimen/camera_thumb_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/camera_thumb_frame_boundary"
            android:layout_marginTop="@dimen/camera_thumb_frame_boundary"
            android:contentDescription="@string/content_description_right_eye"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_eye_right"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/camera_thumb_layout_left"
        android:layout_width="@dimen/camera_thumb_frame_size"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:background="@drawable/camera_thumb_background"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/camera_thumb_frame_boundary"
            android:gravity="center_horizontal"
            android:text="@string/content_description_left_eye"/>

        <ImageView
            android:id="@+id/camera_thumb_image_left"
            android:layout_width="@dimen/camera_thumb_size"
            android:layout_height="@dimen/camera_thumb_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/camera_thumb_frame_boundary"
            android:layout_marginTop="@dimen/camera_thumb_frame_boundary"
            android:contentDescription="@string/content_description_left_eye"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_eye_left"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/camera_buttons_layout_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonCameraExternal"
            android:layout_width="@dimen/camerabutton_size"
            android:layout_height="@dimen/camerabutton_size"
            android:layout_marginBottom="@dimen/camerabutton_distance"
            android:background="@drawable/circlebutton_camera_system"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="@dimen/camerabutton_text_size"/>

        <FrameLayout
            android:layout_width="@dimen/camerabutton_size"
            android:layout_height="@dimen/camerabutton_size"
            android:layout_marginBottom="@dimen/camerabutton_distance">

            <Button
                android:id="@+id/buttonCameraViewImages"
                android:layout_width="@dimen/camerabutton_size"
                android:layout_height="@dimen/camerabutton_size"
                android:layout_gravity="center"
                android:background="@drawable/circlebutton_view_images"/>

            <Button
                android:id="@+id/buttonCameraDecline"
                android:layout_width="@dimen/camerabutton_size"
                android:layout_height="@dimen/camerabutton_size"
                android:layout_gravity="bottom|right"
                android:background="@drawable/circlebutton_decline"
                android:visibility="gone"/>

            <Button
                android:id="@+id/buttonCameraReturn"
                android:layout_width="@dimen/camerabutton_size"
                android:layout_height="@dimen/camerabutton_size"
                android:layout_gravity="bottom|right"
                android:background="@drawable/circlebutton_return"
                android:visibility="gone"/>
        </FrameLayout>
    </LinearLayout>


    <Button
        android:id="@+id/buttonCameraAccept"
        android:layout_width="@dimen/camerabutton_main_size"
        android:layout_height="@dimen/camerabutton_main_size"
        android:layout_gravity="center_vertical|right"
        android:background="@drawable/circlebutton_accept"
        android:visibility="gone"/>

    <Button
        android:id="@+id/buttonCameraTrigger"
        android:layout_width="@dimen/camerabutton_main_size"
        android:layout_height="@dimen/camerabutton_main_size"
        android:layout_gravity="center_vertical|right"
        android:background="@drawable/circlebutton_trigger"/>

    <include layout="@layout/activity_camera_settings"/>

</FrameLayout>